...
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/provision_wifi_credentials_btn_text" />

        <Button
            android:id="@+id/provisionThreadCredentialsBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/provision_thread_credentials_btn_text" />

...
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/provision_custom_flow_btn_text" />

        <Button
            android:id="@+id/onOffClusterBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/on_off_level_btn_text" />

...
