<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <EditText
      android:id="@+id/fabricIdEd"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:inputType="text"
      android:textSize="20sp"
      android:hint="@string/enter_fabric_id_hint_text"/>

  <EditText
      android:id="@+id/deviceIdEd"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_toEndOf="@id/fabricIdEd"
      android:inputType="text"
      android:textSize="20sp"
      android:hint="@string/enter_device_id_hint_text"/>

  <androidx.constraintlayout.widget.Barrier
      android:id="@+id/barrier"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:barrierDirection="bottom"
      app:constraint_referenced_ids="fabricIdEd,deviceIdEd" />
</androidx.constraintlayout.widget.ConstraintLayout>