...
        app:layout_constraintBottom_toTopOf="@id/enableLITCommissioningSwitchInBarcode"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" />

    <Button
        android:id="@+id/inputAddressBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/input_address_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
