...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressUpdateFragment"
        android:columnCount="3"
        android:rowCount="2">
        <TextView
            android:id="@+id/onBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:layout_columnWeight="1"
...
